# Generative_AI_Projects

./: README.md
meeting-steward-a2a/: .env.template  .gitignore  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
meeting-steward-a2a/a2a_protocol/: __init__.py  roles.py  routing.py  schemas.py  state.py
meeting-steward-a2a/agents/: __init__.py
meeting-steward-a2a/agents/action_item_agent/: __init__.py  agent.py
meeting-steward-a2a/agents/decision_extractor/: __init__.py  agent.py
meeting-steward-a2a/agents/steward/: __init__.py  graph.py
meeting-steward-a2a/agents/summarizer/: __init__.py  agent.py
meeting-steward-a2a/agents/transcriber/: __init__.py  agent.py  tools.py
meeting-steward-a2a/app_config/: __init__.py  settings.py
meeting-steward-a2a/data/: sample_transcript.txt
meeting-steward-a2a/data/models/: .gitkeep
meeting-steward-a2a/llm_providers/: __init__.py  ollama_client.py  prompts.py
meeting-steward-a2a/scripts/: run_text_meeting.py  transcribe_audio.py
meeting-steward-a2a/services/: __init__.py  pipeline.py  storage.py
meeting-steward-a2a/tests/: __init__.py  test_agents.py  test_pipeline.py
meeting-steward-a2a/ui/: __init__.py  streamlit_app.py
