[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-steward-a2a"
version = "0.1.0"
description = "Intelligent local multi-agent meeting analysis system"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "streamlit>=1.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "faster-whisper>=0.10.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "numpy<2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = [
    "app_config",
    "a2a_protocol",
    "llm_providers",
    "agents",
    "agents.transcriber",
    "agents.summarizer",
    "agents.decision_extractor",
    "agents.action_item_agent",
    "agents.steward",
    "services",
    "ui",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
